--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -14,6 +14,4 @@ header.header
                 h1 community
         .header_menus
             .loginMenu
-                button 로그인
-            //- .option
-            //-     button 옵션
+                button(onclick="location.href='/auth/login'") 로그인
